--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@tailwindcss/vite": "^4.1.7",
+    "firebase": "^11.8.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-router": "^7.6.0",
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.21.2",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
